apps/loki/resources/alloy-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alloy
  namespace: loki
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: alloy
      k8s:app.kubernetes.io/name: alloy
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus-stack
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "12345"
